<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/registerSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/cinzel"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel"
                android:text="@string/name"
                android:textColor="@color/grey"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/borders"
                android:paddingLeft="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/cinzel"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borders"
                android:paddingLeft="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/cinzel"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/cinzel"
                android:text="@string/password"
                android:textColor="@color/grey"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borders"
                android:paddingLeft="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/cinzel"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/cinzel"
                android:text="@string/title"
                android:textColor="@color/grey"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borders"
                android:paddingLeft="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/cinzel"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/cinzel"
                android:onClick="signUpButton"
                android:text="@string/sign_up"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/fillAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cinzel"
            android:text="@string/pleaseFillAllInfo"
            android:textStyle="bold"
            android:textColor="@color/hover"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>